# ccwc

./: README.md  pyproject.toml
ccwc/: main.py
tests/: test_main.py
